Repair overflow x on moblie bug

--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,14 @@
     box-sizing: border-box;
 }
 
-body{
+html, body{
     overflow-x: hidden;
+}
+
+body{
     font-family: 'Montserrat', sans-serif;
     background-color: black;
     color: var(--dark-white);
-    min-height: 100vh;
 }
 
 .color-layout {
